--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/frankdsm/node-sip2"
+    "url": "https://github.com/Dootrix/node-sip2"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,6 @@
     "dateformat": "~2.0.0"
   },
   "devDependencies": {
-    "async": "~2.4.1",
     "eslint": "~3.19.0",
     "eslint-config-airbnb": "~14.1.0",
     "eslint-plugin-import": "~2.2.0",
